--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
 
 {{!-- 1st nav --}}
 <div class="navbar-fixed">
-  <nav id="first-nav"> 
+  <nav id="first-nav">
     <div class="nav-wrapper first-nav">
       <ul id="nav-mobile" class="left">
         <li><a href="/">Home</a></li>
@@ -25,126 +25,128 @@
       {{!-- Sign-up & Login links on right nave ---}}
       <ul id="nav-mobile" class="right">
         <li>
-          <a class="modal-trigger" href="#modal-user-form">Sign-up</a>
-          {{!-- <div id="modal4" class="modal"> --}}
+          <a class="modal-trigger" data-target="modal-user-form">Sign-up</a>
+
           <div id="modal-user-form" class="modal modal-content">
-            <h4>Become a User:</h4>
-            <div class="row">
-              <div class="col s12">
-                <h6>
-                  You will need to create a user account to be able to sign up to volunteer or request services.
-                </h6>
+            <div class="modal-content">
+              <h4>Become a User:</h4>
+              <div class="row">
+                <div class="col s12">
+                  <h6>
+                    You will need to create a user account to be able to sign up to volunteer or request services.
+                  </h6>
+                </div>
+              </div>
+              <br>
+              <h4>Contact Information</h4>
+              <div class="row">
+                <form class="col s12" id="user-form" action="POST">
+                  <div class="row">
+                    <div class="input-field col s6">
+                      <input placeholder="Jane" id="user-first-name" type="text" class="validate">
+                      <label for="user-first-name">First Name: </label>
+                    </div>
+                    <div class="input-field col s6">
+                      <input placeholder="Smith" id="user-last-name" type="text" class="validate">
+                      <label for="user-last-name">Last Name: </label>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="input-field col s12">
+                      <input placeholder="123 Main Street" id="address" type="text" class="validate">
+                      <label for="address">Address: </label>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="input-field col s12">
+                      <input placeholder="Apt. 137" id="address-2" type="text" class="validate">
+                      <label for="address-2">Address: </label>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="input-field col s3">
+                      <input placeholder="Kansas City" id="city" type="text" class="validate">
+                      <label for="city">City: </label>
+                    </div>
+                    <div class="input-field col s3">
+                      <input placeholder="Kansas" id="state" type="text" class="validate">
+                      <label for="state">State: </label>
+                    </div>
+                    <div class="input-field col s3">
+                      <input placeholder="66012" id="zip-code" type="text" class="validate">
+                      <label for="zip-code">Zip Code: </label>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="input-field col s3">
+                      <input placeholder="123-456-7890" id="phone-number" type="text" class="validate">
+                      <label for="phone-number">Phone Number: </label>
+                    </div>
+                    <div class="input-field col s3">
+                      <input placeholder="email@something.com" id="email" type="text" class="validate">
+                      <label for="email">Email: </label>
+                    </div>
+                    <div class="input-field col s3">
+                      <input placeholder="01/01/2001" id="birthday" type="text" class="validate">
+                      <label for="birthday">Date of Birth: </label>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <h6>What pronouns do you prefer?</h6>
+                    <div class="col s12">
+                      <p>
+                        <label>
+                          <input id="male" class="with-gap" name="gender" type="radio" />
+                          <span>He/Him</span>
+                        </label>
+                      </p>
+                      <p>
+                        <label>
+                          <input id="female" class="with-gap" name="gender" type="radio" />
+                          <span>She/Her</span>
+                        </label>
+                      </p>
+                      <p>
+                        <label>
+                          <input id="non-binary" class="with-gap" name="gender" type="radio" />
+                          <span>They/Them</span>
+                        </label>
+                      </p>
+                      <p>
+                        <label>
+                          <input id="denies" class="with-gap" name="gender" type="radio" />
+                          <span>Prefer not to disclose</span>
+                        </label>
+                      </p>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <h6>Do you want to volunteer or request services:</h6>
+                    <div class="col s12">
+                      <p>
+                        <label for="volunteer-chosen">
+                          <input id="volunteer-chosen" value="0" class="with-gap" name="role" type="radio" checked>
+                          <span>Volunteer</span>
+                        </label>
+                      </p>
+                      <p>
+                        <label for="request-services-chosen">
+                          <input id="request-services-chosen" value="1" class="with-gap" name="role" type="radio">
+                          <span>Request Services</span>
+                        </label>
+                      </p>
+                    </div>
+                  </div>
+                  <div class="row append-h6">
+                    <h6>What activity are you interested in?</h6>
+                    <div class="col s12" id="append-radios-checkmarks"></div>
+                  </div>
+                  <a class="modal-close waves-effect waves-light btn" id="submit-user">Submit</a>
+                </form>
               </div>
             </div>
-            <br>
-            <h4>Contact Information</h4>
-            <div class="row">
-              <form class="col s12" id="user-form" action="POST">
-                <div class="row">
-                  <div class="input-field col s6">
-                    <input placeholder="Jane" id="user-first-name" type="text" class="validate">
-                    <label for="user-first-name">First Name: </label>
-                  </div>
-                  <div class="input-field col s6">
-                    <input placeholder="Smith" id="user-last-name" type="text" class="validate">
-                    <label for="user-last-name">Last Name: </label>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="input-field col s12">
-                    <input placeholder="123 Main Street" id="address" type="text" class="validate">
-                    <label for="address">Address: </label>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="input-field col s12">
-                    <input placeholder="Apt. 137" id="address-2" type="text" class="validate">
-                    <label for="address-2">Address: </label>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="input-field col s3">
-                    <input placeholder="Kansas City" id="city" type="text" class="validate">
-                    <label for="city">City: </label>
-                  </div>
-                  <div class="input-field col s3">
-                    <input placeholder="Kansas" id="state" type="text" class="validate">
-                    <label for="state">State: </label>
-                  </div>
-                  <div class="input-field col s3">
-                    <input placeholder="66012" id="zip-code" type="text" class="validate">
-                    <label for="zip-code">Zip Code: </label>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="input-field col s3">
-                    <input placeholder="123-456-7890" id="phone-number" type="text" class="validate">
-                    <label for="phone-number">Phone Number: </label>
-                  </div>
-                  <div class="input-field col s3">
-                    <input placeholder="email@something.com" id="email" type="text" class="validate">
-                    <label for="email">Email: </label>
-                  </div>
-                  <div class="input-field col s3">
-                    <input placeholder="01/01/2001" id="birthday" type="text" class="validate">
-                    <label for="birthday">Date of Birth: </label>
-                  </div>
-                </div>
-                <div class="row">
-                  <h6>What pronouns do you prefer?</h6>
-                  <div class="col s12">
-                    <p>
-                      <label>
-                        <input id="male" class="with-gap" name="gender" type="radio" />
-                        <span>He/Him</span>
-                      </label>
-                    </p>
-                    <p>
-                      <label>
-                        <input id="female" class="with-gap" name="gender" type="radio" />
-                        <span>She/Her</span>
-                      </label>
-                    </p>
-                    <p>
-                      <label>
-                        <input id="non-binary" class="with-gap" name="gender" type="radio" />
-                        <span>They/Them</span>
-                      </label>
-                    </p>
-                    <p>
-                      <label>
-                        <input id="denies" class="with-gap" name="gender" type="radio" />
-                        <span>Prefer not to disclose</span>
-                      </label>
-                    </p>
-                  </div>
-                </div>
-                <div class="row">
-                  <h6>Do you want to volunteer or request services:</h6>
-                  <div class="col s12">
-                    <p>
-                      <label>
-                        <input id="volunteer-chosen" class="with-gap" name="role" type="radio" />
-                        <span>Volunteer</span>
-                      </label>
-                    </p>
-                    <p>
-                      <label>
-                        <input id="request-services-chosen" class="with-gap" name="role" type="radio" />
-                        <span>Request Services</span>
-                      </label>
-                    </p>
-                  </div>
-                </div>
-                <div class="row append-h6">
-                  <h6>What activity are you interested in?</h6>
-                  <div class="col s12" id="append-radios-checkmarks"></div>
-                </div>
-                <a class="modal-close waves-effect waves-light btn" id="submit-user">Submit</a>
-              </form>
-            </div>
           </div>
-            {{!-- </div>
+          {{!-- </div>
             <div class="modal-footer">
             </div> --}}
         </li>
