--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -151,7 +151,7 @@
             </div> --}}
         </li>
 
-        <li><a href="/admin">Login</a>
+        <li><a href="/login">Login</a>
         </li>
       </ul>
     </div>
