--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -202,13 +202,46 @@
 
 </body>
 
-<div class="footer">
-  © 2019 Copyright
-  <a class="social-icons" href="#" target="_blank"><i class="fab fa-pinterest-p fa-2x"></i></a>
-  <a class="social-icons" href="#" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a>
-  <a class="social-icons" href="#" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
-  <a class="social-icons" href="#" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
-</div>
+<footer class="page-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col l4 s12 footer-content">
+        <h5>Company</h5>
+        <br>
+        <ul>
+          <li><a href="/">About</a></li>
+          <li><a href="/">Meet the Team</a></li>
+          <li><a href="/">Contact</a></li>
+        </ul>
+      </div>
+      <div class="col l4 s12 footer-content">
+        <h5>Follow Us</h5>
+        <br>
+        <ul>
+          <li> <a href="#" target="_blank"><i class="fab fa-twitter fa-1x footer-icons"></i>Twitter</a></li>
+          <li><a href="#" target="_blank"><i class="fab fa-facebook-square fa-1x footer-icons"></i>Facebook</a></li>
+          <li><a href="#" target="_blank"><i class="fab fa-instagram fa-1x footer-icons"></i>Instagram</a></li>
+          <li><a href="#" target="_blank"><i class="fab fa-pinterest-p fa-1x footer-icons"></i>Pinterest</a></li>
+        </ul>
+      </div>
+      <div class="col l4 s12 footer-content">
+        <h5>Stay Updated!</h5>
+        <br>
+        <p>Receive the Lean To newsletter in your inbox monthly.</p>
+        <form>
+          <input type="email" name="email" placeholder="type your email...">
+          <input type="submit" class="modal-close waves-effect waves-light btn" id="submit-btn">
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright">
+    <div class="container copyright">
+      © 2019 Lean To
+    </div>
+  </div>
+</footer>
+            
 
 <script src="https://kit.fontawesome.com/85f0bdccf3.js"></script>
 <!-- jQuery JS -->
