updated api results in categories hb and path in main hb

--- a/views/categories.handlebars
+++ b/views/categories.handlebars
@@ -70,7 +70,7 @@
   {{> women-workplace}}
   {{/render_category}}
 
-  {{#render_category "category" this.category}}
+  {{#render_category "women-topics" this.category}}
   {{> categories-landing}}
   {{/render_category}}
 
