--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
       <ul id="nav-mobile" class="left">
         <li><a href="/">Home</a></li>
         <li><a href="/services">Services</a></li>
-        <li><a href="/categories/category">Categories</a></li>
+        <li><a href="/categories/women-topics">Categories</a></li>
       </ul>
       {{!-- Sign-up & Login links on right nave ---}}
       <ul id="nav-mobile" class="right">
